--- a/style.css
+++ b/style.css
@@ -1,26 +1,220 @@
 body{
     background-color: whitesmoke;
     color: black;
-    text-align: center;
+    margin: 0;
+    font-family: 'Montserrat', sans-serif;
+}
+
+p, .description{
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 0.1px  ;
+    text-align: justify;
+}
+
+ a {
+    color: crimson;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+a:hover{
+    text-decoration: underline;
+   
+}
+
+#container{
+    width: 80%;
+    max-width: 980px;
+    margin: 40px auto;
+    display: flex;
+
+}
+
+#intro{
+    width: 300px;
+    margin-right: 20px;
+}
+
+main{
+    margin: 32px 0px;
+}
+ 
+#buttons{
+    display: flex;
+    margin-bottom: 32px;
+    justify-content: space-evenly;
 }
 
 button{
+    background: none;
     color: crimson;
     border: none;
+    cursor: pointer;
+    outline: none;
+    font-size: 14px;
     font-weight: bold;
-    background: none;
+    line-height: 18px;
+    letter-spacing: 0.2px;
+    transition: 400ms;
 }
+
+button:hover{
+    text-decoration: underline;
+}
+
 
 button.fat{
     color: white;
     background-color: crimson;
+    width: 150px;
+    height: 40px;
+    border-radius: 6px;
+    box-shadow: 0px 8px 16px rgba(220, 20, 60, 0.55);
 }
 
-#footer a {
-    color: black;
+button.fat:hover{
     text-decoration: none;
 }
 
-.hide{
-    display: none;
+footer p{
+    text-align: center;
+    font-size: 14px;
+    font-weight: 400px;
+    line-height: 18px;
+    letter-spacing: 0.2px;
+     
+}
+
+footer a{
+    opacity: 0.7;
+}
+
+.idea{
+    display: flex;
+    background-color: white;
+    padding: 32px;
+    margin-bottom: 32px;
+    box-shadow: 4px 0px 16px -8px;
+}
+
+.idea img{
+    width: 60px;
+    height: 60px;
+    margin-right: 32px;
+}
+
+.idea h3{
+    margin: 0px;
+}
+
+.idea p{
+    margin: 8px 0px;
+    color: darkslategray;
+}
+ .idea .description{
+     margin: 16px 0px;
+ }
+
+/* Modal */
+
+#modal {
+    background-color: crimson;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+
+}
+
+#modal .content{
+    margin-top: 128px;
+    color: white;
+}
+
+#modal .content h1{
+    text-align: center;
+    text-transform: uppercase;
+}
+
+.content form{
+    width: 80%;
+    max-width: 800px;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr ;
+    gap: 20px
+}
+
+.content form div:nth-child(3),
+.content form div:nth-child(4),
+.content form div:nth-child(5){
+    grid-column: span 2;
+}
+
+
+
+
+form input, form textarea{
+    width: 100%;
+    padding: 12px;
+    box-sizing: border-box;
+    border-radius: 6px;
+    border: 1px solid rgba(220, 20, 60, 0.5);
+    outline: none;
+    font-size: 16px;
+}
+
+form label{
+    font-weight: 600;
+    line-height: 32px;
+    letter-spacing: 0.8px;
+}
+
+form a{
+    background-color: rgba(255, 255, 255, 0.1);
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 14px;
+    font-weight: bold;
+    width: 150px;
+    height: 40px;
+    text-decoration: none;
+    border-radius: 6px;
+    align-self: end;
+    transition: 400ms;
+}
+
+form a:hover{
+    background-color: white;
+    color: crimson;
+}
+
+form button{
+    background-color: white;
+    width: 150px;
+    height: 40px;
+    border-radius: 6px;
+    cursor: pointer;
+    margin-top: 32px;
+    grid-column: 2;
+    justify-self: end;
+}
+
+form button:hover{
+    background-color: royalblue;
+    color: white;
+    text-decoration: none;
+    
+}
+
+
+
+#modal.hide{
+    opacity: 0;
+    visibility: hidden;
 }
