--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ a:hover{
 }
 
 main{
-    margin: 32px 0px;
+    margin: 32px 0
 }
  
 #buttons{
@@ -77,10 +77,10 @@ button.fat:hover{
     text-decoration: none;
 }
 
-footer p{
+footer {
     text-align: center;
     font-size: 14px;
-    font-weight: 400px;
+    font-weight: 400;
     line-height: 18px;
     letter-spacing: 0.2px;
      
@@ -96,6 +96,7 @@ footer a{
     padding: 32px;
     margin-bottom: 32px;
     box-shadow: 4px 0px 16px -8px;
+    border-radius: 8px;
 }
 
 .idea img{
@@ -105,15 +106,15 @@ footer a{
 }
 
 .idea h3{
-    margin: 0px;
+    margin: 0;
 }
 
 .idea p{
-    margin: 8px 0px;
+    margin: 8px 0;
     color: darkslategray;
 }
  .idea .description{
-     margin: 16px 0px;
+     margin: 16px 0;
  }
 
 /* Modal */
@@ -122,10 +123,11 @@ footer a{
     background-color: crimson;
     position: absolute;
     top: 0;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     display: flex;
     justify-content: center;
+    transition: 400ms;
 
 }
 
