--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@ body{
     margin: 0;
     font-family: 'Montserrat', sans-serif;
 }
+/*Global*/
+body.hideScroll{
+    overflow: hidden;
+}
 
 p, .description{
     font-size: 16px;
@@ -12,7 +16,7 @@ p, .description{
     text-align: justify;
 }
 
- a {
+a {
     color: crimson;
     font-weight: bold;
     text-decoration: none;
@@ -23,6 +27,29 @@ a:hover{
    
 }
 
+.button{
+    color: white;
+    background-color: crimson;
+    width: 150px;
+    height: 40px;
+    border-radius: 8px;
+    box-shadow: 0px 8px 16px rgba(220, 20, 60, 0.4);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    font-size: 14px;
+    font-weight: bold;
+}
+
+.button:hover{
+    background-color: royalblue;
+    box-shadow: 0px 8px 16px rgba(65, 105, 225, 0.4);
+    text-decoration: none;
+}
+
+
+/* Padrão */
 #container{
     width: 80%;
     max-width: 980px;
@@ -33,7 +60,7 @@ a:hover{
 
 #intro{
     width: 300px;
-    margin-right: 20px;
+    margin-right: 64px;
 }
 
 main{
@@ -61,20 +88,6 @@ button{
 
 button:hover{
     text-decoration: underline;
-}
-
-
-button.fat{
-    color: white;
-    background-color: crimson;
-    width: 150px;
-    height: 40px;
-    border-radius: 6px;
-    box-shadow: 0px 8px 16px rgba(220, 20, 60, 0.55);
-}
-
-button.fat:hover{
-    text-decoration: none;
 }
 
 footer {
@@ -123,20 +136,26 @@ footer a{
     background-color: crimson;
     position: absolute;
     top: 0;
-    width: 100vw;
-    height: 100vh;
+    bottom: 0;
+    right: 0;
+    left: 0;
     display: flex;
     justify-content: center;
     transition: 400ms;
 
 }
 
+#modal.addScroll{
+    overflow: auto;
+}
+
 #modal .content{
-    margin-top: 128px;
+    margin-top: 5%;
     color: white;
 }
 
 #modal .content h1{
+    margin-top: 0;
     text-align: center;
     text-transform: uppercase;
 }
@@ -144,7 +163,7 @@ footer a{
 .content form{
     width: 80%;
     max-width: 800px;
-    margin: 0 auto;
+    margin: 0 auto 5%;
     display: grid;
     grid-template-columns: 1fr 1fr ;
     gap: 20px
@@ -214,9 +233,70 @@ form button:hover{
     
 }
 
-
-
 #modal.hide{
     opacity: 0;
     visibility: hidden;
+}
+
+/*ideais.html*/
+#page-ideas #container{
+    display: block;
+}
+
+#page-ideas header {
+    display: flex;
+    justify-content: space-between;
+}
+
+#page-ideas nav{
+    display: flex;
+    align-items: center;
+}
+
+#page-ideas nav li{
+    list-style-type: none;
+    margin-right: 16px;
+}
+
+#page-ideas nav li a{
+    color: black;
+}
+
+#page-ideas nav li a.button{
+    color: white;
+}
+
+#page-ideas nav li:last-child{
+    margin: 0;   
+}
+
+#page-ideas section#title{
+    text-align: center;
+}
+
+#page-ideas section#title p{
+    text-align: center;
+    opacity: 0.8;
+    margin: 0px;
+}
+
+#page-ideas section#title h1{
+    margin: 0px;
+    font-size: 28px;
+}
+
+#page-ideas section#ideas{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+}
+
+#page-ideas .idea{
+    margin: 0;
+}  
+
+#page-ideas section#title,
+#page-ideas section#ideas,
+#page-ideas  footer{
+    margin-top: 64px;
 }
